<resources>
    <string name="app_name">MDT</string>
    <string name="login">Login</string>
    <string name="user_name_hint">User name</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>

    <string name="login_btn_txt">LOGIN</string>
    <string name="sign_up_btn_txt">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Username required</string>
    <string name="invalid_password">Password required</string>
    <string name="invalid_confirm_password">Confirm password doesn\'t match </string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_internet_message">Internet unavailable</string>
    <string name="welcome">Welcome!</string>
    <string name="register_success">Registration successful</string>
    <string name="register_failed">Registration failed</string>
    <string name="btn_make_transfer_txt">MAKE TRANSFER</string>
    <string name="transaction_history_title">Your transaction history</string>
    <string name="you_have">You have</string>
    <string name="account_no_title">Account No</string>
    <string name="account_holder_title">Account Holder</string>
    <string name="logout">Logout</string>
    <string name="sp_payee_title">Payee</string>
    <string name="transfer_success">Transferred successfully</string>
    <string name="transfer_failed">Transfer Failed</string>
    <string name="invalid_amount">Invalid amount</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency_formatter">SGD %,.2f</string>
    <string name="amount_title">Amount</string>
    <string name="description_title">Description</string>
</resources>