<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.ui.MainActivity">

    <LinearLayout
        android:id="@+id/cv_balance_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_balance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_have"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium" />

        <TextView
            android:id="@+id/tv_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            android:textStyle="bold"
            tools:text="SGD 21,421.33" />

        <TextView
            android:id="@+id/tv_account_no_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_no_title"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall" />

        <TextView
            android:id="@+id/tv_account_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textStyle="bold"
            tools:text="3212-23-23" />

        <TextView
            android:id="@+id/tv_account_holder_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_holder_title"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall" />

        <TextView
            android:id="@+id/tv_account_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textStyle="bold"
            tools:text="Donald trump" />
    </LinearLayout>

    <View
        android:id="@+id/gap_view"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_balance_data"
        app:layout_constraintBottom_toTopOf="@id/tv_transaction_history_title"
        />
    <TextView
        android:id="@+id/tv_transaction_history_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/transaction_history_title"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        app:layout_constraintEnd_toStartOf="@id/guideline6"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/gap_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_transaction_history"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_make_transfer"
        app:layout_constraintEnd_toStartOf="@id/guideline6"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/tv_transaction_history_title" />

    <Button
        android:id="@+id/btn_make_transfer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/btn_make_transfer_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@fraction/left_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@fraction/right_guideline" />
</androidx.constraintlayout.widget.ConstraintLayout>