<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".transfer.ui.TransferActivity">

    <Spinner
        android:id="@+id/sp_payee"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/button_margin"
        android:contentDescription="@string/sp_payee_title"
        android:prompt="@string/sp_payee_title"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_amount"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintDimensionRatio="5:1"
        android:layout_marginTop="@dimen/button_margin"
        app:layout_constraintEnd_toEndOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/sp_payee"
        tools:layout_editor_absoluteY="148dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/amount_title"
            android:inputType="number|numberDecimal"
            android:textColor="#616161"
            tools:text="100.56" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/button_margin"
        android:orientation="vertical"
        app:layout_constraintDimensionRatio="5:4"
        app:layout_constraintEnd_toEndOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/layout_amount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/description_title"
            android:gravity="top"
            android:inputType="textMultiLine"
            tools:text="making transfer amount 100.56 to andy. after receiving please acknowledge receipt of amount" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_make_transfer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/btn_make_transfer_txt"
        app:layout_constraintDimensionRatio="5:1"
        android:layout_marginBottom="@dimen/button_margin"
        app:layout_constraintEnd_toEndOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintBottom_toBottomOf="parent"
         />

    <ProgressBar
        android:id="@+id/transfer_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="4:3"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@fraction/left_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@fraction/right_guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>